<resources>
    <string name="app_name">VerboVersa</string>
    <string name="facebook_app_id">930415622110596</string>

    <!-- Other string resources might already be here -->

    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot?</string>
    <string name="login_with_facebook">Sign in with Facebook</string>
    <string name="login_with_google">Sign in with Google</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_instructions">Password must be at least 8 characters, including 1 number.</string>
    <string name="fb_login_protocol_scheme">0e39277277fe7500b634a567b7f33870</string> <!-- Example with a placeholder App ID -->
    <string name="switch_languages">Switch Languages</string>
    <string name="voice_input">Voice Input</string>
    <string name="camera_input">Camera Input</string>
    <string name="profile">profile</string>
    <string name="translate">Translate</string>
    <string name="tap_to_upload_image">Tap to upload image</string>
    <string name="translated_content">Translated content will appear here</string>
    <string name="profile_icon_description">profile_icon</string>
    <string name="write">Write</string>
    <string name="speech">Speech</string>
    <string name="image">Image</string>
    <string name="text">Text</string>
    <string name="enter_text">Enter Text Here!</string>
    <string name="translation_result">Translation Here!</string>
    <string name="translate_to">Language</string>
    <string name="translate_from">Language</string>
    <string name="speech_prompt">Speak now...</string>
    <string name="speech_not_supported">Speech input not supported on this device</string>
    <string name="facebook_client_token">0e39277277fe7500b634a567b7f33870</string>

</resources>


